Fix home on IE7

--- a/app/assets/stylesheets/section/home.scss
+++ b/app/assets/stylesheets/section/home.scss
@@ -89,7 +89,7 @@ body {
               margin: 0 0 5px;
               display: block;
             }
-            &:last-child {
+            &.last {
               margin: 0;
             }
           }
